--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "kdtree-demo"
 description = "K-dimensional tree space-partitioning data structure demo."
-version = "0.2.2"
+version = "0.3.0"
 license = "MIT"
 authors = ["Alexey Voznyuk <me@swizard.info>"]
 
 [dependencies]
-kdtree = { git = "https://github.com/swizard0/kdtree.git" }
+kdvtree = { git = "https://github.com/swizard0/kdtree.git" }
 log = "0.4"
 clap = "2.31"
 rand = "0.4"
